# django-qiyu-token

./: .devcontainer.json  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: black-format.yml  pylama-lint.yml  pytest.yml
django_qiyu_token/: apps.py  security.py
django_qiyu_token/admin/: jwt_app.py  jwt_token.py
django_qiyu_token/locale/en/LC_MESSAGES/: django.mo
django_qiyu_token/locale/zh/LC_MESSAGES/: django.mo
django_qiyu_token/models/: jwt_app.py  jwt_token.py
mk/: i18n.mk
token_app/: manage.py  pytest.ini
token_app/token_app/: asgi.py  settings.py  urls.py  wsgi.py
